style: correct alignment

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -177,6 +177,7 @@ button {
     text-decoration: none;
     text-transform: uppercase;
     transition: all 0.2s ease-in-out;
+    text-align: left;
 
     &:hover {
       opacity: 0.7;
@@ -193,6 +194,9 @@ button {
         position: absolute;
         top: 50%;
         transform: translate(-50%, -50%);
+      }
+      a {
+        text-align: center;
       }
     }
   }
